fix velocity config

--- a/ssm/src/main/resources/velocity.properties
+++ b/ssm/src/main/resources/velocity.properties
@@ -10,6 +10,6 @@ velocimacro.library.autoreload=true
 
 runtime.log.logsystem.class = org.apache.velocity.runtime.log.Log4JLogChute
 
-userdirective=framework.velocity.directive.BlockDirective,com.gupao.framework.velocity.directive.OverrideDirective,com.gupao.framework.velocity.directive.ExtendsDirective
+userdirective=framework.velocity.directive.BlockDirective,framework.velocity.directive.OverrideDirective,framework.velocity.directive.ExtendsDirective
 
 file.resource.loader.cache = true
