--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <ssm.version>1.0.0</ssm.version>
         <dubbo-order.version>1.0.0</dubbo-order.version>
         <dubbo-user.version>1.0.0</dubbo-user.version>
-     
+
         <spring.version>4.3.0.RELEASE</spring.version>
     </properties>
 
@@ -51,7 +51,6 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.5</version>
         </dependency>
-
 
 
         <dependency>
@@ -126,7 +125,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>dubbo</artifactId>
-            <version>2.5.3</version>
+            <version>2.6.5</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.springframework</groupId>
@@ -318,6 +317,11 @@
             <version>1.0.8</version>
         </dependency>
         <!--mybatis 数据访问层 end -->
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>3.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
